discussion/kv_engine/176424/176424_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52490: Move Backfill Task to its own source files

Change-Id: I74fa054f38cd327221bbb106bb059ed827a51003

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-06-28 07:48:48.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-06-28 07:48:58.000000000
Message: 
Patch Set 3: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/304433/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-28 08:21:32.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/301/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:141:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->schedule(managerTask);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:210:17: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
                ExecutorPool::get()->wake(managerTask->getId());
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:363:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/301/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/301/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/295/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/295/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/295/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/416/ : FAILURE

Failure of GoogleTest "CollectionsOSODcpTests/CollectionsOSODcpTest.emptyDiskSnapshot_MB_49847/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] CollectionsOSODcpTests/CollectionsOSODcpTest.emptyDiskSnapshot_MB_49847/persistent_couchstore_full_eviction
unknown file: error: SEH exception with code 0xc0000005 thrown in the test body.
[  FAILED  ] CollectionsOSODcpTests/CollectionsOSODcpTest.emptyDiskSnapshot_MB_49847/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (14 ms)
CollectionsOSODcpTests/CollectionsOSODcpTest.emptyDiskSnapshot_MB_49847/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/416/ )

Failure of an engine_testapp test:

<pre>
Running [71/93]: dcp invalid mutation(s)/deletion(s)...E0628 01:01:52.996394 154008 NotificationQueue.h:555] [NotificationQueue] Unexpected state while draining signals: signal_=1 bytes_read=0
(111 ms) OK


99% tests passed, 3 tests failed out of 423

Total Test time (real) = 362.70 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/416/ )

Timeout of a CTest test 423/423 Test #295: ep_testsuite_dcp.full_eviction.magma ..........................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/416/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/303/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/303/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/444/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/159]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2328 Test failed: `" (Expected `376013" to be less than or equal to `360448" - Unexpected fileSize for vbucket)
[2022-06-28T08:00:42.820Z] (289 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/444/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17500/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/321/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/313/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/310/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/300/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/313/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
